--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.LoginTest" hash-for-method="loginTest">loginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.NewsLetterTest" hash-for-method="getIcon">getIcon</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.LoginTest" hash-for-method="logoutTest">logoutTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.LoginTest" hash-for-method="negativeloginTest">negativeloginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.NewsLetterTest" hash-for-method="getnewsLetter">getnewsLetter</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,28 +127,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.stockTests.LoginTest</span>
+              <span class="class-name">com.stockTests.NewsLetterTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="loginTest">
-                  </a> <!-- loginTest -->
-                  <span class="method-name">loginTest</span>
+                  <a name="getIcon">
+                  </a> <!-- getIcon -->
+                  <span class="method-name">getIcon</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="logoutTest">
-                  </a> <!-- logoutTest -->
-                  <span class="method-name">logoutTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="negativeloginTest">
-                  </a> <!-- negativeloginTest -->
-                  <span class="method-name">negativeloginTest</span>
+                  <a name="getnewsLetter">
+                  </a> <!-- getnewsLetter -->
+                  <span class="method-name">getnewsLetter</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/3l/htwgz5n16r5_315x7tq62_s40000gn/T/testng-eclipse--840825170/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/3l/htwgz5n16r5_315x7tq62_s40000gn/T/testng-eclipse--67135492/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +158,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.stockTests.LoginTest&quot;/&gt;
+      &lt;class name=&quot;com.stockTests.NewsLetterTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -210,24 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'negativeloginTest')
-data.setCell(0, 2, 'com.stockTests.LoginTest')
-data.setCell(0, 3, 5855);
+data.setCell(0, 1, 'getnewsLetter')
+data.setCell(0, 2, 'com.stockTests.NewsLetterTest')
+data.setCell(0, 3, 3245);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginTest')
-data.setCell(1, 2, 'com.stockTests.LoginTest')
-data.setCell(1, 3, 2024);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'logoutTest')
-data.setCell(2, 2, 'com.stockTests.LoginTest')
-data.setCell(2, 3, 1460);
+data.setCell(1, 1, 'getIcon')
+data.setCell(1, 2, 'com.stockTests.NewsLetterTest')
+data.setCell(1, 3, 936);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,26 +237,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.stockTests.LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.stockTests.NewsLetterTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">loginTest</span>
-                <span class="method-start">11586 ms</span>
+                <span class="method-name">getIcon</span>
+                <span class="method-start">7450 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">logoutTest</span>
-                <span class="method-start">13633 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">negativeloginTest</span>
-                <span class="method-start">15094 ms</span>
+                <span class="method-name">getnewsLetter</span>
+                <span class="method-start">8390 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">20952 ms</span>
+                <span class="method-start">11636 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
