--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be6360">  <td>22/09/08 12:38:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:com.stockTests.LoginTest@64485a47]">loginTest</td> 
+<tr bgcolor="be6360">  <td>22/09/08 14:49:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewsLetterTest.getIcon()[pri:1, instance:com.stockTests.NewsLetterTest@64485a47]">getIcon</td> 
   <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 12:38:05</td>   <td>2047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.logoutTest()[pri:0, instance:com.stockTests.LoginTest@64485a47]">logoutTest</td> 
+<tr bgcolor="be6360">  <td>22/09/08 14:49:24</td>   <td>940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewsLetterTest.getnewsLetter()[pri:1, instance:com.stockTests.NewsLetterTest@64485a47]">getnewsLetter</td> 
   <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 12:38:06</td>   <td>3508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.negativeloginTest()[pri:0, instance:com.stockTests.LoginTest@64485a47]">negativeloginTest</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/08 12:37:51</td>   <td>-11580</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.LoginTest@64485a47]">&gt;&gt;setUp</td> 
+<tr bgcolor="6587f1">  <td>22/09/08 14:49:15</td>   <td>-7446</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.NewsLetterTest@64485a47]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/08 12:38:12</td>   <td>9366</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.LoginTest@64485a47]">&lt;&lt;tearDown</td> 
+<tr bgcolor="6587f1">  <td>22/09/08 14:49:27</td>   <td>4186</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.NewsLetterTest@64485a47]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
 </table>
