--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be6360">  <td>22/08/31 19:47:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegistrationTest.registrationNegativeTest()[pri:0, instance:com.stockTests.UserRegistrationTest@64485a47]">registrationNegativeTest</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/08/31 19:46:58</td>   <td>-6518</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.UserRegistrationTest@64485a47]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/08/31 19:47:21</td>   <td>16689</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.UserRegistrationTest@64485a47]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
+<tr bgcolor="65c96b">  <td>22/09/08 21:34:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">loginTest</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="65c96b">  <td>22/09/08 21:34:04</td>   <td>2467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.logoutTest()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">logoutTest</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="65c96b">  <td>22/09/08 21:34:06</td>   <td>4482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.negativeloginTest()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">negativeloginTest</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="d3bc82">  <td>22/09/08 21:33:41</td>   <td>-20556</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="d3bc82">  <td>22/09/08 21:34:12</td>   <td>10870</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
 </table>
