--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,48 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<tr bgcolor="d3bc82">  <td>22/09/08 21:34:12</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">&lt;&lt;tearDown</td> 
+<tr bgcolor="b29fee">  <td>22/09/15 20:09:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForexTest.USDBDTInterval_10()[pri:10, instance:com.stockTests.ForexTest@6b927fb]">USDBDTInterval_10</td> 
+  <td>main@640070680</td>   <td></td> </tr>
+<tr bgcolor="a9e7c8">  <td>22/09/15 20:09:44</td>   <td>3</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.ForexTest@6b927fb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a9e7c8">  <td>22/09/15 20:09:13</td>   <td>-30467</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.ForexTest@6b927fb]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="d3bc82">  <td>22/09/08 21:33:41</td>   <td>-31426</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="65c96b">  <td>22/09/08 21:34:01</td>   <td>-10870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">loginTest</td> 
+<tr bgcolor="b29fee">  <td>22/09/15 20:09:44</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForexTest.crossRatesChart_7()[pri:7, instance:com.stockTests.ForexTest@6b927fb]">crossRatesChart_7</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="65c96b">  <td>22/09/08 21:34:06</td>   <td>-6388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.negativeloginTest()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">negativeloginTest</td> 
+<tr bgcolor="b29fee">  <td>22/09/15 20:09:44</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForexTest.majorPairColorCheck_8()[pri:8, instance:com.stockTests.ForexTest@6b927fb]">majorPairColorCheck_8</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="65c96b">  <td>22/09/08 21:34:04</td>   <td>-8403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.logoutTest()[pri:0, instance:com.stockTests.LoginTest@3e58a80e]">logoutTest</td> 
+<tr bgcolor="b29fee">  <td>22/09/15 20:09:44</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForexTest.forexTestUSDBDT_9()[pri:9, instance:com.stockTests.ForexTest@6b927fb]">forexTestUSDBDT_9</td> 
   <td>main@640070680</td>   <td></td> </tr>
-=======
-<<<<<<< Updated upstream
-<tr bgcolor="6587f1">  <td>22/09/08 22:29:12</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Base.openingBrowser()[pri:0, instance:com.stockTests.SearchStockTest@a74868d]">&gt;&gt;openingBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 22:30:05</td>   <td>53222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.neagativeSearchTest()[pri:4, instance:com.stockTests.SearchStockTest@a74868d]">neagativeSearchTest</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 22:29:48</td>   <td>36550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.currentStockPrice()[pri:2, instance:com.stockTests.SearchStockTest@a74868d]">currentStockPrice</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 22:30:20</td>   <td>68861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.companySymbolLookup()[pri:5, instance:com.stockTests.SearchStockTest@a74868d]">companySymbolLookup</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 22:29:57</td>   <td>45265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.oneYearGraph()[pri:3, instance:com.stockTests.SearchStockTest@a74868d]">oneYearGraph</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/08 22:30:21</td>   <td>69674</td> <td>&nbsp;</td><td title="&lt;&lt;Base.closingBrowser()[pri:0, instance:com.stockTests.SearchStockTest@a74868d]">&lt;&lt;closingBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 22:29:34</td>   <td>22205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.searchTest()[pri:1, instance:com.stockTests.SearchStockTest@a74868d]">searchTest</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 22:30:21</td>   <td>69660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.gainersLosers()[pri:6, instance:com.stockTests.SearchStockTest@a74868d]">gainersLosers</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-=======
-<tr bgcolor="96bacf">  <td>22/09/08 21:56:48</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.ForexTest@316bcf94]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1409160703</td>   <td></td> </tr>
-<tr bgcolor="70f7aa">  <td>22/09/08 21:56:23</td>   <td>-24926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForexTest.majorPairColorCheck_8()[pri:8, instance:com.stockTests.ForexTest@316bcf94]">majorPairColorCheck_8</td> 
-  <td>main@1409160703</td>   <td></td> </tr>
-<tr bgcolor="70f7aa">  <td>22/09/08 21:56:39</td>   <td>-9117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForexTest.USDBDTInterval_10()[pri:10, instance:com.stockTests.ForexTest@316bcf94]">USDBDTInterval_10</td> 
-  <td>main@1409160703</td>   <td></td> </tr>
-<tr bgcolor="70f7aa">  <td>22/09/08 21:55:54</td>   <td>-54124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForexTest.crossRatesChart_7()[pri:7, instance:com.stockTests.ForexTest@316bcf94]">crossRatesChart_7</td> 
-  <td>main@1409160703</td>   <td></td> </tr>
-<tr bgcolor="96bacf">  <td>22/09/08 21:55:26</td>   <td>-82168</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.ForexTest@316bcf94]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1409160703</td>   <td></td> </tr>
-<tr bgcolor="70f7aa">  <td>22/09/08 21:56:23</td>   <td>-24899</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ForexTest.forexTestUSDBDT_9()[pri:9, instance:com.stockTests.ForexTest@316bcf94]">forexTestUSDBDT_9</td> 
-  <td>main@1409160703</td>   <td></td> </tr>
->>>>>>> Stashed changes
->>>>>>> main
 </table>
